<resources>
    <string name="app_name">Evaluacion2_elefanteVerde</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnlistar">Listar</string>
    <string name="btnagregar">Agregar</string>
    <string name="txtnombre">Ingresa nombre del producto</string>
    <string name="txtcategoria">Ingresa la categoría</string>
    <string name="txtcantidad">Ingresa el stock</string>
    <string name="txtprecio">Ingresa el precio sin IVA</string>

    <string name="txtregistro">Registra tu producto aquí</string>

    <string name="txtbotonguardar">Guardar producto</string>

    <string name="txtcategoriaview">Guardar producto</string>

    <string name="txtpdolar">Precio en USD</string>
    <string name="txtpiva">Precio en IVA</string>
    <string name="txtpsiniva">Precio sin IVA</string>



    <string name="placeholder">este txt sera reemplazado por algo hermoso</string>










    <string name="txttituloapp">App de mantención de productos</string>
    <string name="txtusuario">Hola! Qué necesitas? Elige una opción:</string>
    <string name="titleNombre">Nombre del producto</string>
    <string name="titleStock">Stock disponible</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


</resources>
