<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragmento_Registro">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center" android:layout_margin="10dp">
        <TextView
                android:text="Registra tu producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/txtRegistro" android:textSize="24sp"
                android:textAlignment="center"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editNombre" android:hint="@string/txtnombre" android:inputType="text"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editCantidad" android:hint="@string/txtcantidad" android:inputType="number"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editCategoria" android:hint="@string/txtcategoria" android:inputType="text"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editPrecioNormal" android:hint="@string/txtprecio" android:inputType="number"/>
        <Button
                android:text="Guardar producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnGuardar" android:layout_margin="15dp"/>
    </LinearLayout>

</FrameLayout>